--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,21 +21,19 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Python 3.10
+      - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.12'
 
-      - name: Upgrade pip
+      - name: Upgrade nox and uv
         run: |
-          pip install --upgrade pip
-          pip --version
-
-      - name: Install
-        run: python -m pip install build setuptools
+          python -m pip install --upgrade 'nox[uv]'
+          nox --version
+          uv --version
 
       - name: Build package
-        run: python -m build
+        run: nox -s build
 
       - name: Upload package
         if: github.event_name == 'release'
