--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
+requires = ["setuptools>=77", "setuptools_scm[toml]>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -17,7 +17,8 @@ keywords = [
   "machine-learning",
   "reproducibility"
 ]
-license = {text = "Apache License 2.0"}
+license = "Apache-2.0"
+license-files = ["LICENSE"]
 maintainers = [{name = "Iterative", email = "support@dvc.org"}]
 authors = [{name = "Iterative", email = "support@dvc.org"}]
 requires-python = ">=3.9"
