--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,25 +17,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v5
+      - name: Set up Python 3.14
+        uses: actions/setup-python@v6
         with:
-          python-version: '3.10'
+          python-version: '3.14'
 
-      - name: Upgrade pip
-        run: |
-          pip install --upgrade pip
-          pip --version
-
-      - name: Install
-        run: python -m pip install build setuptools
+      - uses: astral-sh/setup-uv@v7
+      - name: Install nox
+        run: uv pip install --system nox --upgrade
 
       - name: Build package
-        run: python -m build
+        run: nox -s build
 
       - name: Upload package
         if: github.event_name == 'release'
