--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,88 +14,81 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test_full:
-    timeout-minutes: 30
+  lint:
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
-          python-version: "3.12"
+          python-version: "3.13"
 
-      - uses: astral-sh/setup-uv@v6
+      - uses: astral-sh/setup-uv@v7
         with:
-          enable-cache: true
-          cache-suffix: ${{ matrix.pyv }}
-          cache-dependency-glob: pyproject.toml
+          enable-cache: false
 
-      - name: Full install
-        run: uv pip install -e '.[dev]' --system
+      - name: Install nox
+        run: uv pip install --system nox --upgrade
 
       - uses: actions/cache@v4
         with:
           path: ~/.cache/pre-commit/
           key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
 
-      - name: pre-commit
-        run: uv tool run pre-commit run --show-diff-on-failure --color=always --all-files
+      - name: Lint code
+        run: nox -s lint
 
-      - name: mypy
-        run: mypy
-
-      - name: Run tests
-        run: pytest -v tests --cov --cov-report=xml --cov-config=pyproject.toml
-
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: coverage.xml
-          flags: dvclive
-
-  test_core:
+  tests:
     timeout-minutes: 30
-    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        pyv: ["3.9", "3.10", "3.11", "3.12"]
-
+        pyv: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
+        type: [core_tests]
+        include:
+          - os: ubuntu-latest
+            pyv: "3.13"
+            type: tests
+        exclude:
+          - os: ubuntu-latest
+            pyv: "3.13"
+            type: core_tests
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
 
       - name: Set up Python ${{ matrix.pyv }}
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.pyv }}
-          cache: "pip"
-          cache-dependency-path: setup.cfg
 
-      - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip wheel
-          pip --version
+      - uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: false
 
-      - name: Install core
-        run: |
-          pip install -e '.[tests]'
+      - name: Install nox
+        run: uv pip install --system nox --upgrade
 
       - name: Run tests
-        run: pytest -v tests --ignore=tests/frameworks
+        run: nox -s ${{ matrix.type }}-${{ matrix.pyv }} -- --cov-report=xml
+
+      - name: Build package
+        run: nox -s build
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v5
 
   check:
     if: always()
-    needs: [test_full, test_core]
+    needs: [lint, tests]
     runs-on: ubuntu-latest
     steps:
       - uses: re-actors/alls-green@release/v1
