--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=77", "setuptools_scm[toml]>=8"]
 build-backend = "setuptools.build_meta"
 
 [project]
-description = "Experiments logger for ML projects."
 name = "dvclive"
+description = "Experiments logger for ML projects."
 readme = "README.md"
 keywords = [
   "ai",
@@ -18,6 +18,7 @@ keywords = [
   "reproducibility"
 ]
 license = "Apache-2.0"
+license-files = ["LICENSE"]
 maintainers = [{name = "Iterative", email = "support@dvc.org"}]
 authors = [{name = "Iterative", email = "support@dvc.org"}]
 requires-python = ">=3.9"
@@ -27,7 +28,9 @@ classifiers = [
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12"
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14"
 ]
 dynamic = ["version"]
 dependencies = [
@@ -59,11 +62,6 @@ tests = [
   "transformers[torch]",
   "tf-keras"
 ]
-dev = [
-  "dvclive[all,tests]",
-  "mypy==1.17.1",
-  "types-PyYAML"
-]
 mmcv = ["mmcv"]
 tf = ["tensorflow"]
 xgb = ["xgboost"]
@@ -74,6 +72,11 @@ lightning = ["lightning>=2.0", "torch", "jsonargparse[signatures]>=4.26.1"]
 optuna = ["optuna"]
 all = [
   "dvclive[image,mmcv,tf,xgb,lgbm,huggingface,fastai,lightning,optuna,plots,markdown]"
+]
+dev = [
+  "dvclive[image,tf,xgb,lgbm,huggingface,fastai,lightning,optuna,plots,markdown,tests]",
+  "mypy==1.17.1",
+  "types-PyYAML"
 ]
 
 [project.urls]
